appservices/domain/native-rollout-experiment/native-experiment-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: native-rollout-experiment
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: native-rollout-experiment
  template:
    metadata:
      labels:
        app: native-rollout-experiment
    spec:
      containers:
      - name: canary-demo
        image: argoproj/rollouts-demo:green
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      steps:
      - experiment:
          duration: 60s
          templates:
          - name: preview
            # specRef is a convenience reference indicating that the canary's pod spec should be used in this experiment.
            specRef: canary
            # The preview template's selector/labels are overwritten so that they are different
            # than the rollout's selector, allowing it to be reached separately
            selector:
              matchLabels:
                app: preview
            metadata:
              labels:
                app: preview
          # The 'load-test' AnalysisTemplate uses `wrk` to perform benchmarking. See: load-test-analysis.yaml
          analyses:
          - name: load-test
            templateName: http-benchmark
            args:
            - name: host
              value: native-rollout-experiment-canary
