appservices/domain/native-rollout-experiment/native-experiment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: native-rollout-experiment-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: preview

---
apiVersion: v1
kind: Service
metadata:
  name: native-rollout-experiment
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: native-rollout-experiment
