appservices/domain/native-rollout-experiment/native-experiment-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: native-rollout-experiment
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: native-rollout-experiment.poc.awx.onl
    http:
      paths:
      - backend:
          serviceName: native-rollout-experiment
          servicePort: http
        path: /
  # tls:
  # - hosts:
  #   - native-rollout-experiment.poc.awx.onl
  #   secretName: tls-cert-native-rollout-experiment
